--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,12 @@
     <string name="home_label">Home</string>
     <string name="title_activity_compose">ComposeActivity</string>
     <string name="compose_hint">Whats happening?</string>
+    <string name="profile_label">Profile</string>
+    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="title_activity_third_party">ThirdPartyActivity</string>
+    <string name="user_description_label">User description</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="followers_label">n Followers</string>
+    <string name="following_label">n Following</string>
 
 </resources>
