Added tweets count, progress bars everywhere.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="followers_label">n Followers</string>
     <string name="following_label">n Following</string>
+    <string name="tweets_count_label">n Tweets</string>
 
 </resources>
